# dramatize

./: README.md
.devcontainer/api/: Dockerfile  devcontainer.json
.devcontainer/client/: Dockerfile  devcontainer.json
.devcontainer/shared/p10k/: .p10k.zsh  setup.sh
api/: Dockerfile  launcher.py  pyproject.toml
api/src/: models.py
client/: Dockerfile  launcher.py  pyproject.toml
db/: Dockerfile
deploy/docker/dev/: docker-compose.yml
